--- a/cssDeneme.css
+++ b/cssDeneme.css
@@ -15,3 +15,21 @@
     </P>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=<P
+    >, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p style="color: aqua;">MERHABA CSS</p>
+    <P>
+        <span style="color:cornflowerblue">CSS</span>
+        <span style="color:darkcyan">deneme 2 basladi</span>
+    </P>
+</body>
+</html>
